WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98207
treeScopeOfParent doesn't return the TreeScope of the parent
https://bugs.webkit.org/show_bug.cgi?id=98207
Summary
treeScopeOfParent doesn't return the TreeScope of the parent
Dominic Mazzoni
Reported
2012-10-02 15:42:07 PDT
I think it should say "return parent->treeScope()", right? Looks like this should be better covered by tests. static inline TreeScope* treeScopeOfParent(Node* node, ContainerNode* insertionPoint) { if (Node* parent = node->parentNode()) parent->treeScope(); return insertionPoint->treeScope(); }
Attachments
Refactor.
(2.14 KB, patch)
2012-10-18 00:21 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.18 KB, patch)
2012-10-18 02:22 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.88 KB, patch)
2012-10-18 06:02 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Hayato Ito
Comment 1
2012-10-18 00:21:41 PDT
Created
attachment 169358
[details]
Refactor.
WebKit Review Bot
Comment 2
2012-10-18 00:35:55 PDT
Comment on
attachment 169358
[details]
Refactor. Rejecting
attachment 169358
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14384890
WebKit Review Bot
Comment 3
2012-10-18 01:08:44 PDT
Comment on
attachment 169358
[details]
Refactor.
Attachment 169358
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/14392954
New failing tests: fast/dom/shadow/get-element-by-id-in-shadow-mutation.html
Hayato Ito
Comment 4
2012-10-18 02:22:59 PDT
Created
attachment 169374
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-10-18 04:54:33 PDT
Comment on
attachment 169374
[details]
Patch for landing Rejecting
attachment 169374
[details]
from commit-queue. New failing tests: fast/dom/shadow/get-element-by-id-in-shadow-mutation.html Full output:
http://queues.webkit.org/results/14459002
Hayato Ito
Comment 6
2012-10-18 06:02:55 PDT
Created
attachment 169400
[details]
Patch for landing
Hayato Ito
Comment 7
2012-10-18 06:04:42 PDT
Let me retry. I've removed a treeScopeOfParent(), which we don't need to call. (In reply to
comment #6
)
> Created an attachment (id=169400) [details] > Patch for landing
WebKit Review Bot
Comment 8
2012-10-18 06:22:41 PDT
Comment on
attachment 169400
[details]
Patch for landing Clearing flags on attachment: 169400 Committed
r131739
: <
http://trac.webkit.org/changeset/131739
>
WebKit Review Bot
Comment 9
2012-10-18 06:22:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug