treeScopeOfParent doesn't return the TreeScope of the parent https://bugs.webkit.org/show_bug.cgi?id=98207

Reviewed by Hajime Morita.

A minor clean up. Remove treeScopeOfParent() in Element.cpp.

No tests needed, this is just a clean up.

* dom/Element.cpp:
(WebCore::Element::removedFrom):


git-svn-id: svn://svn.chromium.org/blink/trunk@131739 bbb929c8-8fbe-4397-9dbb-9b2b20218538